--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,7 +2,6 @@
 agp = "8.5.1"
 kotlin = "2.0.0"
 coreKtx = "1.13.1"
-junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 lifecycleRuntimeKtx = "2.8.4"
@@ -12,6 +11,7 @@ composeBom = "2024.06.00"
 mlKitTextRecognition = "16.0.0"
 tensorflowLite = "2.16.1"
 tensorflowLiteSupport = "0.4.4"
+tensorflowLiteMetadata = "0.1.0"
 sentencePiece = "1.9.6"
 kotlinxSerialization = "1.6.3"
 
@@ -38,6 +38,8 @@ mlkit-text-recognition-korean = { group = "com.google.mlkit", name = "text-recog
 tensorflow-lite = { group = "org.tensorflow", name = "tensorflow-lite", version.ref = "tensorflowLite" }
 tensorflow-lite-gpu = { group = "org.tensorflow", name = "tensorflow-lite-gpu", version.ref = "tensorflowLite" }
 tensorflow-lite-support = { group = "org.tensorflow", name = "tensorflow-lite-support", version.ref = "tensorflowLiteSupport" }
+tensorflow-lite-select-tf-ops = { group = "org.tensorflow", name = "tensorflow-lite-select-tf-ops", version.ref = "tensorflowLite" }
+tensorflow-lite-metadata = { group = "org.tensorflow", name = "tensorflow-lite-metadata", version.ref = "tensorflowLiteMetadata" }
 levyfan-sentencepiece = { group = "com.github.levyfan", name = "sentencepiece", version.ref = "sentencePiece" }
 kotlinx-serialization = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinxSerialization" }
 
