--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,7 @@
 .tflite filter=lfs diff=lfs merge=lfs -text
+.onnx filter=lfs diff=lfs merge=lfs -text
+.ort filter=lfs diff=lfs merge=lfs -text
+.config filter=lfs diff=lfs merge=lfs -text
 .spm filter=lfs diff=lfs merge=lfs -text
 .model filter=lfs diff=lfs merge=lfs -text
 .json filter=lfs diff=lfs merge=lfs -text
