--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,9 +8,11 @@ lifecycleRuntimeKtx = "2.8.4"
 activityCompose = "1.9.1"
 composeBom = "2024.06.00"
 
+composeLifecycle = "2.8.6"
 mlKitTextRecognition = "16.0.0"
 sentencePiece = "1.9.6"
 kotlinxSerialization = "1.6.3"
+androidCameraX = "1.3.4"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -27,6 +29,7 @@ androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-man
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 
+lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "composeLifecycle" }
 mlkit-text-recognition-latin = { group = "com.google.mlkit", name = "text-recognition", version.ref = "mlKitTextRecognition" }
 mlkit-text-recognition-chinese = { group = "com.google.mlkit", name = "text-recognition-chinese", version.ref = "mlKitTextRecognition" }
 mlkit-text-recognition-devanagari = { group = "com.google.mlkit", name = "text-recognition-devanagari", version.ref = "mlKitTextRecognition" }
@@ -34,6 +37,10 @@ mlkit-text-recognition-japanese = { group = "com.google.mlkit", name = "text-rec
 mlkit-text-recognition-korean = { group = "com.google.mlkit", name = "text-recognition-korean", version.ref = "mlKitTextRecognition" }
 levyfan-sentencepiece = { group = "com.github.levyfan", name = "sentencepiece", version.ref = "sentencePiece" }
 kotlinx-serialization = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinxSerialization" }
+androidx-camera-core = { group = "androidx.camera", name = "camera-core", version.ref = "androidCameraX" }
+androidx-camera-camera2 = { group = "androidx.camera", name = "camera-camera2", version.ref = "androidCameraX" }
+androidx-camera-view = { group = "androidx.camera", name = "camera-view", version.ref = "androidCameraX" }
+androidx-camera-lifecycle = { group = "androidx.camera", name = "camera-lifecycle", version.ref = "androidCameraX" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
