--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="name.ricardoismy.translate"
+<manifest package="app.versta.translate"
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools">
 
@@ -26,7 +26,7 @@
             tools:targetApi="34"
             android:largeHeap="true">
         <activity
-                android:name=".MainActivity"
+                android:name="app.versta.translate.MainActivity"
                 android:exported="true"
                 android:theme="@style/Theme.Translate">
             <intent-filter>
