--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,7 @@ composeBom = "2024.09.03"
 
 androidComposeAnmiation = "1.7.3"
 androidComposeMaterial3 = "1.3.0"
+androidDataStore = "1.1.1"
 androidCameraX = "1.4.0-rc03"
 appacheCommonsCompress = "1.23.0"
 composeLifecycle = "2.8.6"
@@ -21,6 +22,7 @@ kotlinxSerialization = "1.6.3"
 sqldelight = "2.0.2"
 materialIcons = "1.7.3"
 navigationCompose = "2.8.2"
+
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -42,6 +44,7 @@ androidx-camera-view = { group = "androidx.camera", name = "camera-view", versio
 androidx-compose-material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "androidComposeMaterial3" }
 androidx-camera-lifecycle = { group = "androidx.camera", name = "camera-lifecycle", version.ref = "androidCameraX" }
 androidx-compose-animation = { group = "androidx.compose.animation", name = "animation", version.ref = "androidComposeAnmiation" }
+androidx-datastore-preferences = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "androidDataStore" }
 appache-commons-compress = { group = "org.apache.commons", name = "commons-compress", version.ref = "appacheCommonsCompress" }
 koin-android = { module = "io.insert-koin:koin-android", version.ref = "koinAndroid" }
 koin-androidx-compose = { module = "io.insert-koin:koin-androidx-compose", version.ref = "koinCompose" }
