--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,28 +1,28 @@
 [versions]
 agp = "8.5.2"
 kotlin = "2.0.0"
-coreKtx = "1.13.1"
+coreKtx = "1.15.0"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
-lifecycleRuntimeKtx = "2.8.6"
-activityCompose = "1.9.2"
-composeBom = "2024.09.03"
+lifecycleRuntimeKtx = "2.8.7"
+activityCompose = "1.9.3"
+composeBom = "2024.11.00"
 
-androidComposeAnmiation = "1.7.3"
-androidComposeMaterial3 = "1.3.0"
+androidComposeAnmiation = "1.7.5"
+androidComposeMaterial3 = "1.3.1"
 androidDataStore = "1.1.1"
-androidCameraX = "1.4.0-rc03"
+androidCameraX = "1.4.0"
 appacheCommonsCompress = "1.23.0"
-composeLifecycle = "2.8.6"
+composeLifecycle = "2.8.7"
 mlKitTextRecognition = "16.0.1"
-sentencePiece = "1.9.6"
 koinAndroid = "3.5.6"
 koinCompose = "3.5.6"
 kotlinxSerialization = "1.6.3"
 sqldelight = "2.0.2"
-materialIcons = "1.7.3"
-navigationCompose = "2.8.2"
-
+materialIcons = "1.7.5"
+navigationCompose = "2.8.4"
+onnxRuntime = "1.20.0"
+onnxRuntimeExtensions = "0.13.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -49,7 +49,6 @@ appache-commons-compress = { group = "org.apache.commons", name = "commons-compr
 koin-android = { module = "io.insert-koin:koin-android", version.ref = "koinAndroid" }
 koin-androidx-compose = { module = "io.insert-koin:koin-androidx-compose", version.ref = "koinCompose" }
 kotlinx-serialization = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinxSerialization" }
-levyfan-sentencepiece = { group = "com.github.levyfan", name = "sentencepiece", version.ref = "sentencePiece" }
 lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "composeLifecycle" }
 material-icons = { group = "androidx.compose.material", name = "material-icons-core", version.ref = "materialIcons" }
 material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended", version.ref = "materialIcons" }
@@ -61,6 +60,8 @@ mlkit-text-recognition-korean = { group = "com.google.mlkit", name = "text-recog
 navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
 sqldelight-android = { module = "app.cash.sqldelight:android-driver", version.ref = "sqldelight" }
 sqldelight-coroutines = { module = "app.cash.sqldelight:coroutines-extensions", version.ref = "sqldelight" }
+onnxruntime = { group = "com.microsoft.onnxruntime", name = "onnxruntime-android", version.ref = "onnxRuntime" }
+onnxruntime-extensions = { group = "com.microsoft.onnxruntime", name = "onnxruntime-extensions-android", version.ref = "onnxRuntimeExtensions" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
