--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,26 +1,24 @@
 [versions]
 agp = "8.5.2"
-kotlin = "2.0.0"
+kotlin = "2.1.0"
 coreKtx = "1.15.0"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 lifecycleRuntimeKtx = "2.8.7"
 activityCompose = "1.9.3"
-composeBom = "2024.11.00"
+composeBom = "2024.12.01"
 
-androidComposeAnmiation = "1.7.5"
+androidComposeAnimation = "1.7.6"
 androidComposeMaterial3 = "1.3.1"
 androidDataStore = "1.1.1"
-androidCameraX = "1.4.0"
+androidCameraX = "1.4.1"
 appacheCommonsCompress = "1.23.0"
 composeLifecycle = "2.8.7"
 mlKitTextRecognition = "16.0.1"
-koinAndroid = "3.5.6"
-koinCompose = "3.5.6"
 kotlinxSerialization = "1.6.3"
 sqldelight = "2.0.2"
-materialIcons = "1.7.5"
-navigationCompose = "2.8.4"
+materialIcons = "1.7.6"
+navigationCompose = "2.8.5"
 onnxRuntime = "1.20.0"
 onnxRuntimeExtensions = "0.13.0"
 
@@ -43,11 +41,9 @@ androidx-camera-camera2 = { group = "androidx.camera", name = "camera-camera2", 
 androidx-camera-view = { group = "androidx.camera", name = "camera-view", version.ref = "androidCameraX" }
 androidx-compose-material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "androidComposeMaterial3" }
 androidx-camera-lifecycle = { group = "androidx.camera", name = "camera-lifecycle", version.ref = "androidCameraX" }
-androidx-compose-animation = { group = "androidx.compose.animation", name = "animation", version.ref = "androidComposeAnmiation" }
+androidx-compose-animation = { group = "androidx.compose.animation", name = "animation", version.ref = "androidComposeAnimation" }
 androidx-datastore-preferences = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "androidDataStore" }
 appache-commons-compress = { group = "org.apache.commons", name = "commons-compress", version.ref = "appacheCommonsCompress" }
-koin-android = { module = "io.insert-koin:koin-android", version.ref = "koinAndroid" }
-koin-androidx-compose = { module = "io.insert-koin:koin-androidx-compose", version.ref = "koinCompose" }
 kotlinx-serialization = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinxSerialization" }
 lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "composeLifecycle" }
 material-icons = { group = "androidx.compose.material", name = "material-icons-core", version.ref = "materialIcons" }
