--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,16 +1,15 @@
 [versions]
 agp = "8.5.2"
 kotlin = "2.1.0"
-coreKtx = "1.13.1"
+coreKtx = "1.15.0"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 lifecycleRuntimeKtx = "2.8.7"
 activityCompose = "1.9.3"
 composeBom = "2024.12.01"
 
-nicolasRaoulJakorama = "1.0.0"
 androidComposeAnimation = "1.7.6"
-androidComposeMaterial3 = "1.3.1"
+androidComposeMaterial3 = "1.4.0-alpha05"
 androidDataStore = "1.1.1"
 androidCameraX = "1.4.1"
 appacheCommonsCompress = "1.23.0"
@@ -22,6 +21,7 @@ materialIcons = "1.7.6"
 navigationCompose = "2.8.5"
 onnxRuntime = "1.20.0"
 onnxRuntimeExtensions = "0.13.0"
+luceneAnalyzersKuromoji = "8.11.4"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -47,6 +47,7 @@ androidx-datastore-preferences = { group = "androidx.datastore", name = "datasto
 appache-commons-compress = { group = "org.apache.commons", name = "commons-compress", version.ref = "appacheCommonsCompress" }
 kotlinx-serialization = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinxSerialization" }
 lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "composeLifecycle" }
+lucene-analyzers-kuromoji = { group = "org.apache.lucene", name = "lucene-analyzers-kuromoji", version.ref = "luceneAnalyzersKuromoji" }
 material-icons = { group = "androidx.compose.material", name = "material-icons-core", version.ref = "materialIcons" }
 material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended", version.ref = "materialIcons" }
 mlkit-text-recognition-latin = { group = "com.google.mlkit", name = "text-recognition", version.ref = "mlKitTextRecognition" }
@@ -55,7 +56,6 @@ mlkit-text-recognition-devanagari = { group = "com.google.mlkit", name = "text-r
 mlkit-text-recognition-japanese = { group = "com.google.mlkit", name = "text-recognition-japanese", version.ref = "mlKitTextRecognition" }
 mlkit-text-recognition-korean = { group = "com.google.mlkit", name = "text-recognition-korean", version.ref = "mlKitTextRecognition" }
 navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
-nicolas-raoul-jakaroma = { group = "com.github.nicolas-raoul", name = "jakaroma", version.ref = "nicolasRaoulJakorama" }
 sqldelight-android = { module = "app.cash.sqldelight:android-driver", version.ref = "sqldelight" }
 sqldelight-coroutines = { module = "app.cash.sqldelight:coroutines-extensions", version.ref = "sqldelight" }
 onnxruntime = { group = "com.microsoft.onnxruntime", name = "onnxruntime-android", version.ref = "onnxRuntime" }
