Implemented translation settings, started reworking camera text tracking

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,11 +25,11 @@
         android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:enableOnBackInvokedCallback="true"
         android:theme="@style/Versta.Theme"
         tools:targetApi="35">
         <activity
             android:name=".MainActivity"
-            android:screenOrientation="portrait"
             android:exported="true"
             android:theme="@style/Versta.Theme">
             <intent-filter>
@@ -40,7 +40,6 @@
         </activity>
 
         <activity android:name=".TranslateActivity"
-            android:screenOrientation="portrait"
             android:exported="true"
             android:label="Translate"
             android:theme="@style/Versta.Theme">
