--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,21 +1,23 @@
 [versions]
-agp = "8.5.2"
+agp = "8.8.0"
 kotlin = "2.1.0"
 coreKtx = "1.15.0"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 lifecycleRuntimeKtx = "2.8.7"
-activityCompose = "1.9.3"
-composeBom = "2024.12.01"
+activityCompose = "1.10.0"
+composeBom = "2025.01.00"
 
+accompanistPermissions = "0.37.0"
 androidComposeAnimation = "1.7.6"
-androidComposeMaterial3 = "1.4.0-alpha05"
-androidDataStore = "1.1.1"
-androidCameraX = "1.4.1"
-appacheCommonsCompress = "1.23.0"
+androidComposeMaterial3 = "1.4.0-alpha06"
+androidDataStore = "1.1.2"
+androidCameraX = "1.5.0-alpha05"
+androidBoofCv = "1.1.7"
+appacheCommonsCompress = "1.27.1"
 composeLifecycle = "2.8.7"
 mlKitTextRecognition = "16.0.1"
-kotlinxSerialization = "1.6.3"
+kotlinxSerialization = "1.8.0"
 sqldelight = "2.0.2"
 materialIcons = "1.7.6"
 navigationCompose = "2.8.5"
@@ -34,17 +36,22 @@ androidx-ui = { group = "androidx.compose.ui", name = "ui" }
 androidx-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
 androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
 androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
-androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 
-androidx-camera-core = { group = "androidx.camera", name = "camera-core", version.ref = "androidCameraX" }
+accomanist-permissions = { group = "com.google.accompanist", name = "accompanist-permissions", version.ref = "accompanistPermissions" }
 androidx-camera-camera2 = { group = "androidx.camera", name = "camera-camera2", version.ref = "androidCameraX" }
+androidx-camera-compose = { group = "androidx.camera", name = "camera-compose", version.ref = "androidCameraX" }
+androidx-camera-core = { group = "androidx.camera", name = "camera-core", version.ref = "androidCameraX" }
+androidx-camera-effects = { group = "androidx.camera", name = "camera-effects", version.ref = "androidCameraX" }
+androidx-camera-lifecycle = { group = "androidx.camera", name = "camera-lifecycle", version.ref = "androidCameraX" }
 androidx-camera-view = { group = "androidx.camera", name = "camera-view", version.ref = "androidCameraX" }
 androidx-compose-material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "androidComposeMaterial3" }
-androidx-camera-lifecycle = { group = "androidx.camera", name = "camera-lifecycle", version.ref = "androidCameraX" }
 androidx-compose-animation = { group = "androidx.compose.animation", name = "animation", version.ref = "androidComposeAnimation" }
 androidx-datastore-preferences = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "androidDataStore" }
 appache-commons-compress = { group = "org.apache.commons", name = "commons-compress", version.ref = "appacheCommonsCompress" }
+boof-cv-android = { group = "org.boofcv", name = "boofcv-android", version.ref = "androidBoofCv" }
+boof-cv-core = { group = "org.boofcv", name = "boofcv-core", version.ref = "androidBoofCv" }
+boof-cv-geo = { group = "org.boofcv", name = "boofcv-geo", version.ref = "androidBoofCv" }
 kotlinx-serialization = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinxSerialization" }
 lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "composeLifecycle" }
 lucene-analyzers-kuromoji = { group = "org.apache.lucene", name = "lucene-analyzers-kuromoji", version.ref = "luceneAnalyzersKuromoji" }
