--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,4 @@
 .spm filter=lfs diff=lfs merge=lfs -text
 .model filter=lfs diff=lfs merge=lfs -text
 .json filter=lfs diff=lfs merge=lfs -text
+.bin filter=lfs diff=lfs merge=lfs -text
