--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,10 @@
         android:enableOnBackInvokedCallback="true"
         android:theme="@style/Versta.Theme"
         tools:targetApi="35">
+        <meta-data
+                android:name="firebase_analytics_collection_deactivated"
+                android:value="true"/>
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
