--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,18 +10,15 @@ composeBom = "2025.02.00"
 
 aboutLibraries = "11.6.3"
 accompanistPermissions = "0.37.0"
+androidMaterial = "1.12.0"
 androidComposeAnimation = "1.7.8"
 androidComposeMaterial3 = "1.4.0-alpha06"
 androidDataStore = "1.1.2"
-androidCameraX = "1.5.0-alpha05"
-androidBoofCv = "1.1.7"
 androidSplashScreen = "1.0.0"
+androidAppCompat = "1.7.0"
 appacheCommonsCompress = "1.27.1"
-aspectj = "1.9.22.1"
 composeLifecycle = "2.8.7"
-mlKitTextRecognition = "16.0.1"
 kotlinxSerialization = "1.8.0"
-kotlinReflect = "2.1.10"
 sqldelight = "2.0.2"
 timber = "5.0.1"
 materialIcons = "1.7.8"
@@ -47,32 +44,19 @@ about-libraries-core = { module = "com.mikepenz:aboutlibraries-core", version.re
 about-libraries-compose-core = { module = "com.mikepenz:aboutlibraries-compose", version.ref = "aboutLibraries" }
 about-libraries-compose-m3 = { module = "com.mikepenz:aboutlibraries-compose-m3", version.ref = "aboutLibraries" }
 accomanist-permissions = { group = "com.google.accompanist", name = "accompanist-permissions", version.ref = "accompanistPermissions" }
-androidx-camera-camera2 = { group = "androidx.camera", name = "camera-camera2", version.ref = "androidCameraX" }
-androidx-camera-compose = { group = "androidx.camera", name = "camera-compose", version.ref = "androidCameraX" }
-androidx-camera-core = { group = "androidx.camera", name = "camera-core", version.ref = "androidCameraX" }
-androidx-camera-effects = { group = "androidx.camera", name = "camera-effects", version.ref = "androidCameraX" }
-androidx-camera-lifecycle = { group = "androidx.camera", name = "camera-lifecycle", version.ref = "androidCameraX" }
-androidx-camera-view = { group = "androidx.camera", name = "camera-view", version.ref = "androidCameraX" }
+android-material = { group = "com.google.android.material", name = "material", version.ref = "androidMaterial" }
+androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "androidAppCompat" }
 androidx-compose-material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "androidComposeMaterial3" }
 androidx-compose-animation = { group = "androidx.compose.animation", name = "animation", version.ref = "androidComposeAnimation" }
 androidx-datastore-preferences = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "androidDataStore" }
 androidx-splash-screen = { group = "androidx.core", name = "core-splashscreen", version.ref = "androidSplashScreen" }
 appache-commons-compress = { group = "org.apache.commons", name = "commons-compress", version.ref = "appacheCommonsCompress" }
-boof-cv-android = { group = "org.boofcv", name = "boofcv-android", version.ref = "androidBoofCv" }
-boof-cv-core = { group = "org.boofcv", name = "boofcv-core", version.ref = "androidBoofCv" }
-boof-cv-geo = { group = "org.boofcv", name = "boofcv-geo", version.ref = "androidBoofCv" }
 jakewharton-timber = { group = "com.jakewharton.timber", name = "timber", version.ref = "timber" }
 kotlinx-serialization = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinxSerialization" }
-kotlin-reflect = { group = "org.jetbrains.kotlin", name = "kotlin-reflect", version.ref = "kotlinReflect" }
 lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "composeLifecycle" }
 lucene-analyzers-kuromoji = { group = "org.apache.lucene", name = "lucene-analyzers-kuromoji", version.ref = "luceneAnalyzersKuromoji" }
 material-icons = { group = "androidx.compose.material", name = "material-icons-core", version.ref = "materialIcons" }
 material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended", version.ref = "materialIcons" }
-mlkit-text-recognition-latin = { group = "com.google.mlkit", name = "text-recognition", version.ref = "mlKitTextRecognition" }
-mlkit-text-recognition-chinese = { group = "com.google.mlkit", name = "text-recognition-chinese", version.ref = "mlKitTextRecognition" }
-mlkit-text-recognition-devanagari = { group = "com.google.mlkit", name = "text-recognition-devanagari", version.ref = "mlKitTextRecognition" }
-mlkit-text-recognition-japanese = { group = "com.google.mlkit", name = "text-recognition-japanese", version.ref = "mlKitTextRecognition" }
-mlkit-text-recognition-korean = { group = "com.google.mlkit", name = "text-recognition-korean", version.ref = "mlKitTextRecognition" }
 navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
 sqldelight-android = { module = "app.cash.sqldelight:android-driver", version.ref = "sqldelight" }
 sqldelight-coroutines = { module = "app.cash.sqldelight:coroutines-extensions", version.ref = "sqldelight" }
